--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>biz.turnonline.ecosystem</groupId>
             <artifactId>turnonline-product-billing-client</artifactId>
-            <version>1.0-20181029.153941-4</version>
+            <version>0.9</version>
         </dependency>
         <dependency>
             <groupId>org.ctoolkit.restapi</groupId>
